[gd_scene load_steps=8 format=3 uid="uid://h40g20g7nsdj"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_d3r3p"]
[ext_resource type="Texture2D" uid="uid://dgglgudpjkywr" path="res://assets/title.png" id="1_yhtos"]
[ext_resource type="Texture2D" uid="uid://ddgxpujn0jcqh" path="res://assets/multiplayer.png" id="2_6y48p"]
[ext_resource type="Script" path="res://Button.gd" id="3_aorho"]
[ext_resource type="Texture2D" uid="uid://cwdg8bf6thr43" path="res://assets/vs_ai.png" id="3_ss76j"]
[ext_resource type="Texture2D" uid="uid://dbjfdur2o2ckw" path="res://assets/settings.png" id="4_2x05r"]
[ext_resource type="Texture2D" uid="uid://87negsjwcji0" path="res://assets/help.png" id="5_ivq03"]

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3r3p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("1_yhtos")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 10

[node name="Multiplayer" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_6y48p")
stretch_mode = 5
script = ExtResource("3_aorho")

[node name="VSAI" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_ss76j")
stretch_mode = 5
script = ExtResource("3_aorho")

[node name="Settings" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("4_2x05r")
stretch_mode = 5
script = ExtResource("3_aorho")

[node name="Help" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_ivq03")
stretch_mode = 5
script = ExtResource("3_aorho")

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" to="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" to="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" to="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" to="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" to="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" to="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/VSAI" to="." method="_on_vsai_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="VBoxContainer/HBoxContainer/VBoxContainer/Settings" method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="VBoxContainer/HBoxContainer/VBoxContainer/Settings" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="VBoxContainer/HBoxContainer/VBoxContainer/Settings" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/VBoxContainer/Help" to="VBoxContainer/HBoxContainer/VBoxContainer/Help" method="_on_button_down"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Help" to="VBoxContainer/HBoxContainer/VBoxContainer/Help" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Help" to="VBoxContainer/HBoxContainer/VBoxContainer/Help" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
