extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
    pass


func _on_texture_rect_pressed():
    pass # Replace with function body.


func _on_multiplayer_pressed():
    pass # Replace with function body.


func _on_vsai_pressed():
    pass # Replace with function body.


func _on_settings_pressed():
    pass # Replace with function body.


func _on_help_pressed():
    get_tree().change_scene_to_file("res://Help.tscn")
